Memory allocation probelms #85985

Closed
opened 2021-02-25 15:30:05 +01:00 by Bassem Adel Saeed · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics cards: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 , GeForce GTX 1070ti NVIDIA
Processor: AMD Ryzen TH 2950X 16-core
RAM: 32 GB
VRAM : 8 GB for 2080 , 8 GB for 1070ti

Blender Version
Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 18:02, hash: b1142858d4
Worked: (newest version of Blender that worked as expected)

Short description of error
Well , I actually tried another scene other than this one which is 2.92 splash screen scene , and Optix was working fine with RTX 2080 even if scenes are huge and dense , it works like charm , in blender 2.91 in huge scenes RTX 2080 super and 1070ti working fine till things go out of hand and memory is out , which I was fixing it by only disabling 1070ti and it works with no problem
but now even if I disable 1070ti on 2.92 it doesn't work , and gives me an error message I will describe in steps below

Exact steps for others to reproduce the error
1.1 Open a scene that was rendering fine using RTX 2080 super alone using Optix in blender 2.91 but with 1070ti and AMD Ryzen TH 2950x enabled in 2.92
1.2 Hit render
1.3 Error message :Failed to create CUDA context (Out of memory)

2.1 Disable 1070ti from Cycles Optix render devices and hit render
2.2 Error message :Failed to create CUDA context (Out of memory)

3.1 Disable CPU (RTX 2080 only now enabled) and hit render
3.2 Error message :OPTIX_ERROR_INVALID_VALUE in optixAccelBuild(context, NULL, &options, &build_input, 1, temp_mem.device_pointer, sizes.tempSizeInBytes, out_data.device_pointer, sizes.outputSizeInBytes, &out_handle, background ? &compacted_size_prop : NULL, background ? 1 : 0) (device_optix.cpp:1208)Out of memory in cuMemFree(mem.device_pointer) (device_cuda_impl.cpp:975)

0.1 Trying CPU rendering in optix by disabling RTX 2080 and 1070 ti and just leave AMD Ryzen 2950x
0.2 Worked !

Trying 2.92 splash screen scene
4.1 open file blender 2.blend
4.2 Disable 1070ti
4.3 hit render
4.4 CUDA_ERROR_OUT_OF_MEMORY in cuMemAlloc(&out_data, sizes.outputSizeInBytes) (device_optix.cpp:1140)

it seems that I find different messages but all related to memory in the end sometimes an error message mentions parallel error or something like that , but can't get it again

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics cards: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 , GeForce GTX 1070ti NVIDIA Processor: AMD Ryzen TH 2950X 16-core RAM: 32 GB VRAM : 8 GB for 2080 , 8 GB for 1070ti **Blender Version** Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 18:02, hash: `b1142858d4` Worked: (newest version of Blender that worked as expected) **Short description of error** Well , I actually tried another scene other than this one which is 2.92 splash screen scene , and Optix was working fine with RTX 2080 even if scenes are huge and dense , it works like charm , in blender 2.91 in huge scenes RTX 2080 super and 1070ti working fine till things go out of hand and memory is out , which I was fixing it by only disabling 1070ti and it works with no problem but now even if I disable 1070ti on 2.92 it doesn't work , and gives me an error message I will describe in steps below **Exact steps for others to reproduce the error** 1.1 Open a scene that was rendering fine using RTX 2080 super alone using Optix in blender 2.91 but with 1070ti and AMD Ryzen TH 2950x enabled in 2.92 1.2 Hit render 1.3 Error message :Failed to create CUDA context (Out of memory) 2.1 Disable 1070ti from Cycles Optix render devices and hit render 2.2 Error message :Failed to create CUDA context (Out of memory) 3.1 Disable CPU (RTX 2080 only now enabled) and hit render 3.2 Error message :OPTIX_ERROR_INVALID_VALUE in optixAccelBuild(context, NULL, &options, &build_input, 1, temp_mem.device_pointer, sizes.tempSizeInBytes, out_data.device_pointer, sizes.outputSizeInBytes, &out_handle, background ? &compacted_size_prop : NULL, background ? 1 : 0) (device_optix.cpp:1208)Out of memory in cuMemFree(mem.device_pointer) (device_cuda_impl.cpp:975) 0.1 Trying CPU rendering in optix by disabling RTX 2080 and 1070 ti and just leave AMD Ryzen 2950x 0.2 Worked ! **Trying 2.92 splash screen scene** 4.1 open file blender 2.blend 4.2 Disable 1070ti 4.3 hit render 4.4 CUDA_ERROR_OUT_OF_MEMORY in cuMemAlloc(&out_data, sizes.outputSizeInBytes) (device_optix.cpp:1140) it seems that I find different messages but all related to memory in the end sometimes an error message mentions parallel error or something like that , but can't get it again

#86047 was marked as duplicate of this issue

#86047 was marked as duplicate of this issue

Added subscriber: @Basarchitects

Added subscriber: @Basarchitects

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @Renderbicks, @rboxman

Added subscribers: @Renderbicks, @rboxman

This issue was referenced by blender/cycles@5d6104cde3

This issue was referenced by blender/cycles@5d6104cde32ab4f8887b91f6b686c9c2e9f7071b

This issue was referenced by f4f8b6dde3

This issue was referenced by f4f8b6dde32b0438e0b97a6d8ebeb89802987127
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Patrick Mours self-assigned this 2021-03-11 14:15:53 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85985
No description provided.